welcome.lessons.welcome.bat.bool1.In3050.scala.error
in3050:4: error: '(' expected but '{' found.
 } else if {
           ^in3050:9: error: illegal start of simple expression
}
^